<resources>
    <string name="app_name">오월이</string>

    <!-- 공통 -->
    <string name="reply_yes">예</string>
    <string name="reply_no">아니오</string>

    <!-- 다이얼로그 -->
    <string name="dialog_delete">DeleteMyWordDialog</string>
    <string name="dialog_delete_story">DeleteMyStoryDialog</string>
    <string name="dialog_edit_story">EditMyStoryDialog</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_filter">FilterBottomSheetFragmentDialog</string>
    <string name="dialog_logout">LogoutDialog</string>
    <string name="dialog_change_cancel">ChangeCancelDialog</string>
    <string name="dialog_change_cancel_title">나가기</string>
    <string name="dialog_withdrawal">WithdrawalDialog</string>
    <string name="dialog_delete_title">삭제하기</string>
    <string name="dialog_delete_contents">’서로에게 한마디’를 삭제하시겠습니까?</string>
    <string name="dialog_edit">EditMyWordDialog</string>
    <string name="dialog_edit_cancel_title">수정 취소</string>
    <string name="dialog_write_cancel_title">작성 취소</string>
    <string name="dialog_write_cancel_contents">작성한 내용 모두 사라집니다.\n작성을 취소하시겠습니까?</string>
    <string name="dialog_edit_cancel_contents">수정 이전 내용으로 되돌아갑니다.\n수정을 취소하시겠습니까?</string>
    <string name="dialog_change_cancel_contents">변경한 내용 모두 사라집니다.\n그래도 나가시겠습니까?</string>
    <string name="dialog_delete_story_contents">게시글을 삭제하시겠습니까?</string>
    <string name="dialog_delete_story_title">삭제하기</string>
    <string name="dialog_edit_story_contents">게시글을 수정하시겠습니까?</string>
    <string name="dialog_edit_story_title">수정하기</string>

    <!-- 로그인 + 가입 -->
    <string name="owori_splash_subtitle">모여봐요 우리 가족</string>
    <string name="onboarding_first_title">우리 가족 소통해요</string>
    <string name="onboarding_first_subtitle">‘감정뱃지’로 나의 기분을 표현하고\n‘서로에게 한마디’를 나눠봐요</string>
    <string name="onboarding_second_title">가족과 일정을 공유해요</string>
    <string name="onboarding_second_subtitle">공유 캘린더로 온가족의 일정을 체크할 수 있어요\n중요한 가족행사는 오월이가 알려줄게요</string>
    <string name="onboarding_last_title">우리 가족만의 추억을 기록해봐요</string>
    <string name="onboarding_last_subtitle">사진과 함께 그날의 이야기를 공유할 수 있어요\n하루하루를 가족과 함께해요</string>
    <string name="onboarding_next">다음</string>
    <string name="onboarding_login">로그인하기</string>
    <string name="agree_social_login_policy">소셜로그인으로 가입시 이용약관 및 개인정보처리방침에 동의합니다.</string>
    <string name="kakao_login">카카오 로그인</string>
    <string name="apple_login">Apple로 로그인</string>

    <!-- 메뉴 -->
    <string name="menu_home">홈</string>
    <string name="menu_calendar">캘린더</string>
    <string name="menu_story">스토리</string>
    <string name="menu_chat">채팅</string>

    <!-- 홈 -->
    <string name="d_day_title">D-day</string>
    <string name="d_day_content">아직 D-day가 없어요.\n캘린더에서 D-day를 추가해봐요.</string>
    <string name="family_photo_title">가족사진</string>
    <string name="family_photo_content">사진 자유롭게 올리는 공간이에요!\n가족사진을 올려보는건 어떨까요?</string>
    <string name="word_to_each_other_title">서로에게 한마디</string>
    <string name="word_to_each_other_content">오늘 어떤가요? 가족들에게 한마디를 전달해봐요 :)</string>

    <!-- 홈 : 감정선택 -->
    <string name="emotion_question">기분 어떤가요?</string>
    <string name="emotion_registration">감정뱃지 등록해봐요</string>
    <string name="check_button">확인</string>
    <string name="message_emotion_submit">감정이 등록되었어요! 🤓</string>

    <!-- 홈 : 알림 -->
    <string name="notification_title">알림</string>
    <string name="add_photo_title">사진 자유롭게 올리는 공간이에요!\n가족사진을 올려보는건 어떨까요?</string>
    <string name="no_alarm">아직 알림이 없어요</string>

    <!-- 홈 : 서로에게 한마디 -->
    <string name="wirte_my_word">작성하기</string>
    <string name="edit_my_word">수정하기</string>
    <string name="delete_my_word">삭제하기</string>
    <string name="edit_cancel_my_word">수정취소</string>
    <string name="edit_complete_my_word">수정완료</string>
    <string name="write_cancel_my_word">작성취소</string>
    <string name="write_complete_my_word">작성완료</string>
    <string name="message_write_right_word_in_range">1 ~ 50 글자를 입력해 주세요 🥲</string>

    <!-- 홈 : 마이페이지 -->
    <string name="label_nickname">닉네임</string>
    <string name="label_incorrect_nickname">닉네임을 입력해주세요.</string>
    <string name="label_correct_nickname">사용 가능해요!</string>
    <string name="label_birth">생년월일</string>
    <string name="label_incorrect_birth">숫자 8자리에 맞게 다시 입력해주세요.</string>
    <string name="label_correct_birth">올바르게 입력했어요.</string>
    <string name="label_story">작성한 이야기</string>
    <string name="label_liked_story">좋아하는 이야기</string>
    <string name="label_mailbox">우편함</string>
    <string name="label_my_color">마이 컬러</string>
    <string name="hint_default">숫자, 특수문자, 이모티콘 모두 사용 가능</string>
    <string name="hint_birth">8개의 숫자를 입력</string>
    <string name="message_wrong_input">입력값이 잘못되었어요 😢</string>

    <!-- 홈 : 마이페이지 : 설정 -->
    <string name="label_settings">설정</string>
    <string name="label_custom_settings">맞춤설정</string>
    <string name="label_auto_login">자동 로그인</string>
    <string name="label_change_family_name">가족 그룹명 변경</string>
    <string name="label_invitation">초대하기</string>
    <string name="label_customer_center">고객센터</string>
    <string name="label_faq">자주 묻는 질문</string>
    <string name="label_feedback">개발자에게 피드백 보내기</string>
    <string name="label_app_info">앱 정보</string>
    <string name="label_agreement">이용약관</string>
    <string name="label_privacy_policy">개인정보 처리 방침</string>
    <string name="label_open_source_license">오픈소스 라이센스</string>
    <string name="label_version_info">버전정보</string>
    <string name="label_owori_info">About 오월이</string>
    <string name="label_owori_instagram">오월이 인스타그램</string>
    <string name="label_etc">기타</string>
    <string name="label_logout">로그아웃</string>
    <string name="label_withdrawal">탈퇴하기</string>
    <string name="label_logout_contents">로그아웃 하시겠습니까?</string>
    <string name="label_withdrawal_contents">서비스를 탈퇴하더라도 작성하신 글은 자동\n으로 삭제되지 않습니다.\n탈퇴 하시겠습니까?</string>
    <string name="label_change_group_name">변경할 가족 그룹명을 입력해주세요.</string>
    <string name="label_family_group_name">가족 그룹명</string>

    <!-- 스토리 -->
    <string name="label_story_title">우리가족 추억저장소</string>
    <string name="label_filter_latest">최신순</string>
    <string name="label_filter_date">날짜순</string>
    <string name="label_post_story">기록하기</string>
    <string name="label_save_post">작성 완료</string>
    <string name="hint_search_edit">추억을 검색해보세요.</string>
    <string name="hint_title">제목을 입력해주세요.</string>
    <string name="hint_story">추억을 기록해봐요:)\n500자까지 입력할 수 있어요</string>
    <string name="label_start_date">시작일</string>
    <string name="label_end_date">종료일</string>
    <string name="label_title">제목</string>
    <string name="label_my_story">추억 이야기</string>
    <string name="label_photo_title">사진(최대 10장)</string>
    <string name="label_add_photo">사진올리기</string>
    <string name="label_thumbnail">대표사진</string>
    <string name="label_recent_search_keyword">최근 검색어</string>
    <string name="label_remove_all_recent_search_keyword">전체 삭제</string>
    <string name="title_search_tip">검색이 안될 때 꿀팁!</string>
    <string name="contents_search_tip">· 검색어를 바르게 입력했는지 확인해 보세요.\n· 짧은 단어로 검색해 보세요 (예: 동해바다 > 동해)</string>
    <string name="label_dateline">%1$s ~ %2$s</string>
    <string name="label_author">by %1$s</string>
    <string name="label_like_comment_count">좋아요 %1$d 댓글 %2$d</string>
    <string name="label_edit">수정하기</string>
    <string name="label_delete">삭제하기</string>
    <string name="label_comment">가족에게 댓글을 남겨보세요.</string>
    <string name="label_comment_apply">등록</string>

    <!-- key -->
    <string name="kakao_login_key">6c28960f69d4c7f00043b02d890dd6e0</string>
    <string name="kakao_key">kakao6c28960f69d4c7f00043b02d890dd6e0</string>

</resources>