<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="vm"
            type="com.owori.android.presenter.main.home.EmotionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/yellow_ffeeb2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{() -> vm.onClickCloseButton()}"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="true">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/close_emotion_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/emotinQusetionTextView"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emotion_question"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:includeFontPadding="false"
            android:textStyle="bold"
            style="@style/TextTitle.02"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/closeButton" />

        <TextView
            android:id="@+id/emotionRegistrationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/emotion_registration"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emotinQusetionTextView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/emotionRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            app:spanCount="3"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/submitButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emotionRegistrationTextView"
            tools:itemCount="3"
            tools:listitem="@layout/item_emotion" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/check_button"
            android:textColor="@color/white"
            style="@style/TextTitle.02"
            android:includeFontPadding="false"
            android:onClick="@{() -> vm.onClickSubmitButton()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="52dp"
            android:layout_marginBottom="12dp"
            android:elevation="3dp"
            android:background="@drawable/shp_fa7b53_r12"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>