<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.owori.android.auth.ui.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/owori_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@drawable/owori_login_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/kakao_login_button_layout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/owori_login_logo">

            <TextView
                android:id="@+id/subtitle_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owori_splash_subtitle"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/owori_login_typo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subtitle_login" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/kakao_login_button_layout"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> vm.onClickKakaoLogin()}"
            android:background="@drawable/shp_kakao_login_button"
            android:clickable="true"
            app:layout_constraintBottom_toTopOf="@+id/apple_login_button_layout"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/kakao_login_icon"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/kakao_login_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/kakao_login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_medium"
                android:text="@string/kakao_login"
                android:textSize="16dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/apple_login_button_layout"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/shp_apple_login_button"
            android:clickable="true"
            android:onClick="@{() -> vm.onClickGoogleLogin()}"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/apple_login_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/apple_login_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/apple_login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanskr_medium"
                android:text="@string/apple_login"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/notosanskr_medium"
            android:paddingHorizontal="8dp"
            android:singleLine="false"
            android:text="@string/agree_social_login_policy"
            android:textAlignment="center"
            android:textColor="@color/grey_909090"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>