<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.owori.android.presenter.main.home.familyname.FamilyNameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/yellow_fefaea"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{() -> vm.onClickCancelButton()}"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/icon_back_arrow"
                android:paddingStart="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="@{() -> vm.onClickSaveButton()}"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/icon_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/label_change_group_name"
                style="@style/TextBodyRegular.01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/label_change_group_name"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/shp_white_r12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="20dp"
                android:paddingVertical="12dp"
                android:paddingHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/label_change_group_name">

                <TextView
                    android:id="@+id/label_family_group_name"
                    style="@style/TextBodyRegular.03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/label_family_group_name"
                    android:textColor="@color/grey_787878"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/family_group_name_text_view_edit"
                    style="@style/TextBodyRegular.03"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@color/white"
                    android:hint="@string/hint_default"
                    android:imeOptions="actionDone"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:text="@{vm.familyGroupName}"
                    android:textColor="@color/grey_464646"
                    android:textColorHint="@color/grey_e9e9e9"
                    app:layout_constraintBottom_toBottomOf="@id/label_family_group_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/label_family_group_name"
                    app:layout_constraintTop_toTopOf="@+id/label_family_group_name"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="지렁이" />

                <View
                    android:id="@+id/family_group_name_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/grey_e9e9e9"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/family_group_name_text_view_edit" />

                <TextView
                    android:id="@+id/family_group_name_length_text_view"
                    style="@style/TextCaptionMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:textColor="@color/grey_787878"
                    app:layout_constraintEnd_toEndOf="@+id/family_group_name_text_view_edit"
                    app:layout_constraintTop_toTopOf="@id/label_family_group_name" />

                <TextView
                    android:id="@+id/label_family_group_name_warn"
                    style="@style/TextCaptionMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:includeFontPadding="false"
                    android:text="@string/label_correct_nickname"
                    android:textColor="@color/blue_1c86ff"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/family_group_name_divider" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>